Pass -sun-misc-unsafe-memory-access=allow example invocation